Fix minimalist menu align on RTL
Refs #919

--- a/skin/styl/minimalist.styl
+++ b/skin/styl/minimalist.styl
@@ -17,6 +17,9 @@ controls = #0
      border-radius 0px
      &:before
        display none
+     .is-rtl&
+      right auto
+      left -(spacing)
    .fp-play
      width controls_height
    &.aside-time .fp-time
